Minor spelling fix.

--- a/pull.html
+++ b/pull.html
@@ -172,7 +172,7 @@
     </td>
 </tr></table>
 <p>Observations:<ul>
-    <li>For comparison, you can set one of the above graphs to the same parameters to see what your engagement curve would look like if you just only let people pull from the new items. Of course, this is not practical as your players want the abilty to catch them all, but it is notable how much worse the graphs for this pull algorithm look.</li>
+    <li>For comparison, you can set one of the above graphs to the same parameters to see what your engagement curve would look like if you just only let people pull from the new items. Of course, this is not practical as your players want the ability to catch them all, but it is notable how much worse the graphs for this pull algorithm look.</li>
     <li>Making sure that your duplicate pieces hold value makes a huge difference here.</li>
 </ul></p>
 <h3><a name="chap6"></a>Various Pull Algorithms</h3>
